Wed Aug 17 18:39:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Message_Block.{h,cpp,inl}:
          In case a locking strategy is used, also make sure we use the
          lock when accessing the reference count of the ACE_Data_Block.
          Thanks to Viktor Chernenko
          <viktor dot chernenko at med dot ge dot com> for reporting this
          and supplying some patches to start with. This should fix
          according to Viktor some crashes in the notificaion service
          under high load.

Wed Aug 17 15:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Condition_Recursive_Thread_Mutex.{h,cpp}:
          Moved ACE_Condition_Recursive_Thread_Mutex constructor
          implementation from header to cpp file

Wed Aug 17 15:25:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/JAWS2/JAWS/Waiter.cpp:
          Call find_by_index instead of find

Tue Aug 16 19:13:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/JAWS2/JAWS/Assoc_Array.{h,cpp}:
        * apps/JAWS2/JAWS/Concurrency.cpp:
          Changed find(int) to find_by_index (int), to resolve
          ambiguity warnings of the HP aCC compiler

Tue Aug 16 11:16:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/JAWS2/JAWS/Pipeline_Handler_T.cpp:
          Replaced c-style cast with reinterpret cast

Tue Aug 16 11:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-hpux-11.00.h:
          Added ACE_HAS_WORKING_EXPLICIT_TEMPLATE_DESTRUCTOR

Tue Aug 16 06:46:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/JAWS2/JAWS/Assoc_Array.cpp:
          Removed pragma once

Mon Aug 15 21:55:00 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* apps/JAWS2/JAWS/IO_Handler.cpp: #include "JAWS/Filecach.h"
	  to get the definition of JAWS_Cached_FILE.  Thanks to
	  Simon Massey and Steve Huston for reporting this.
