@@ -1,3 +1,11 @@
+Thu Aug 18 09:34:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>
+
+        * ace/Socket_Connect.cpp:
+          Added support for retrieval of IPv6 local interfaces to
+          ACE::get_ip_interfaces().
+          Supported for Windows XP (and newer) and Linux (possibly other
+          *nixes as well).
+
 Wed Aug 17 18:39:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Message_Block.{h,cpp,inl}:
